# giflib

./: CMakeLists.txt  _build_vs2019.sh  gif_font.c  gif_hash.h
cmake/: giflib-config.cmake
